# brainpace-test

./: README.md
.claude/: launch.json
backend/: .env.example  .gitignore  pyproject.toml
backend/.claude/: settings.json
backend/app/: main.py
backend/app/analysis/: cognition.py  mood.py  tiredness.py
backend/app/api/: deps.py
backend/app/api/routes/: cognition.py  health.py  live.py  members.py  mood.py  summary.py  tiredness.py
backend/app/clients/: awear.py
backend/app/core/: cache.py  config.py  timewindow.py
backend/app/models/: schemas.py
backend/app/services/: eeg.py
backend/app/signal/: bands.py
backend/scripts/: pull_today_bands.py
docs/: awear-api.md
frontend/: .env.example  .gitignore  App.tsx  LICENSE  README.md  app.json  package-lock.json  package.json
frontend/src/: api.ts  theme.ts  types.ts
frontend/src/components/: BandCard.tsx  CognitiveChart.tsx  TBRGauge.tsx
frontend/src/hooks/: useEEGStream.ts
frontend/src/screens/: CoachScreen.tsx  HomeScreen.tsx  LiveScreen.tsx  ReportScreen.tsx  StudyScreen.tsx
