[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.3",
    "numpy>=2.4.6",
    "requests>=2.34.2",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "ty>=0.0.40",
]
